--- a/css/estilogeneral.css
+++ b/css/estilogeneral.css
@@ -32,10 +32,10 @@ nav a
   line-height: 65px;
     /* es lo referente al espaciado del texto */
   text-decoration: none;
-  text-shadow: 1px 1px 1px grey;
+  text-shadow: 1px 1px 3px black;
   color: white;
   border-radius: 15px;
-  box-shadow: 0px 0px  20px #00ffff;
+  box-shadow: 0px 0px  20px #00ffff,0px 0px  20px #000000 ;
   /* */
 p {
 
