Creación de pagina secciones
manejo de class y id

--- a/css/index.css
+++ b/css/index.css
@@ -14,7 +14,7 @@ section article {
     margin-top: 60px;
 }
     section article h2{
-        margin: 0;
+        margin-left: 20px;
         padding:  25px 0 10px 50px;
         font-size: 40px;
     
