--- a/css/seccionescss.css
+++ b/css/seccionescss.css
@@ -1,4 +1,76 @@
-p {
+
+/* font-family: 'Lato', sans-serif;
+font-family: 'Shadows Into Light', cursive; */
+
+section{  /*selector */
 background-color: black;
-    
+    width: 960px;
+    height:680px;
+    margin: auto;
 }
+
+
+section article{
+background-color: cadetblue;
+width: 450px;
+height:300px;
+float: left;
+margin-top: 20px;
+margin-left: 20px;    
+}
+
+section article h2{
+margin: 20px;
+font-family: 'Rock Salt', cursive;
+font-weight: 400;
+}
+
+section article p{
+text-align: justify;
+width: 200px;
+margin: 0 20px;
+float: left;
+font-family: 'Lato', sans-serif;
+font-weight: 100;
+}
+
+section article img{
+    border-radius: 5px 10px 15px 20px;
+    box-shadow:  0px 0px  20px #00ffff;
+}
+
+/* El iD class es como un apodo a un artributo. Permite, personalizar algunos */
+
+.tenegro p{
+color: dimgray;
+}
+
+.teblanco p{
+color: white;}
+
+.bordex {
+       border: saddlebrown solid 5px;
+}
+
+
+
+#caja1{
+color:yellow;
+background-color:black;
+box-shadow: 0 0 20px royalblue}
+
+#caja2{
+color:blue;
+background-color: grey}
+
+
+#caja3{
+color:red;
+background-color: wheat;
+}
+
+#caja4{
+color:brown;
+background-color: white;}
+
+
